--- a/src/App.less
+++ b/src/App.less
@@ -1,7 +1,7 @@
 @import '~antd/dist/antd.less';
 body {
     padding: 20px;
-}
-.marT10 {
-    margin-top: 10px;
+    .section {
+        margin-bottom: 20px;
+    }
 }
